2021-08-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/poke.rec (support references to values in the MI protocol):
	Add notes about GC.
	(`format' support): Removed as done.
	(Fix GC roots in AST nodes): Likewise.

2021-08-03  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (support references to values in the MI protocol):
	New entry.

2021-08-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Add missing doc for pk_compile_expression.

2021-07-12  Fangrui Song  <i@maskray.me>

	* doc/poke.texi: Fix a couple of code errors in examples.

2021-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Make cast error
	messages more helpful.

2021-07-04  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Decode-Compute-Encode): Fix `double_number`
	function: s/int/unsigned char/ for bytes.

2021-06-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* common/pk-utils.h (pk_format_binary): New function declaration.
	* common/pk-utils.c (pk_format_binary): New function definition.
	* libpoke/pkl-lex.l (format): Recognize `format`.
	* libpoke/pkl-ast.h (PKL_AST_FORMAT): Define.
	(PKL_AST_FORMAT_ARG): Likewise.
	(PKL_AST_TYPE_A_FORMATER): Likewise.
	(PKL_AST_TYPE_S_FORMATER): Likewise.
	(PKL_AST_FORMAT_FMT): Likewise.
	(PKL_AST_FORMAT_TYPES): Likewise.
	(PKL_AST_FORMAT_ARGS): Likewise.
	(PKL_AST_FORMAT_NARGS): Likewise.
	(PKL_AST_FORMAT_PREFIX): Likewise.
	(PKL_AST_FORMAT_FMT_PROCESSED_P): Likewise.
	(struct pkl_ast_format): New struct.
	(pkl_ast_make_format): New function declaration.
	(PKL_AST_FORMAT_ARG_EXP): Define.
	(PKL_AST_FORMAT_ARG_BASE): Likewise.
	(PKL_AST_FORMAT_ARG_SUFFIX): Likewise.
	(PKL_AST_FORMAT_ARG_BEGIN_SC): Likewise.
	(PKL_AST_FORMAT_ARG_END_SC): Likewise.
	(PKL_AST_FORMAT_ARG_VALUE_P): Likewise.
	(PKL_AST_FORMAT_ARG_FORMAT_MODE): Likewise.
	(PKL_AST_FORMAT_ARG_FORMAT_DEPTH): Likewise.
	(PKL_AST_FORMAT_MODE_FLAT): Likewise.
	(PKL_AST_FORMAT_MODE_TREE): Likewise.